--- a/.github/workflows/welcome.yml
+++ b/.github/workflows/welcome.yml
@@ -2,4 +2,14 @@ name: Post welcome comment
 on:
   pull_request:
     types: [opened]
+jobs:
+  build:
+    name: Post welcome commnet
+    runs-on: ubuntu-latest
+    
+    
+    
+    
+
+    
     
